--- a/server/plugins/parsers/comp_pres_rov_parser.py.dist
+++ b/server/plugins/parsers/comp_pres_rov_parser.py.dist
@@ -62,9 +62,9 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLUMNS = ['date_time','hdr','comp1','comp2','comp3','comp4','comp5','comp6'] # OpenRVDAS style
-RAW_COLUMNS = ['date','time','hdr','comp1','comp2','comp3','comp4','comp5','comp6'] # SCS style
-PROC_COLUMNS = ['date_time','comp1','comp2','comp3','comp4','comp5','comp6']
+RAW_COLS = ['date_time','hdr','comp1','comp2','comp3','comp4','comp5','comp6'] # OpenRVDAS style
+# RAW_COLS = ['date','time','hdr','comp1','comp2','comp3','comp4','comp5','comp6'] # SCS style
+PROC_COLS = ['date_time','comp1','comp2','comp3','comp4','comp5','comp6']
 
 ROUNDING = {
     'comp1': 3,
@@ -168,8 +168,8 @@ class CompPresParser(OpenVDMCSVParser):
 
         logging.debug("Tabulating statistics...")
         self.add_row_validity_stat([len(df_proc), len(errors)])
-        self.add_time_bounds_stat([df_proc.date_time.min(), df_proc.date_time.max()])
-        self.add_bounds_stat([round(df_proc.deltaT.min().total_seconds(),3), round(df_proc.deltaT.max().total_seconds(),3)], 'DeltaT Bounds', 'seconds')
+        self.add_time_bounds_stat([df_proc['date_time'].min(), df_proc['date_time'].max()])
+        self.add_bounds_stat([round(df_proc['deltaT'].min().total_seconds(),3), round(df_proc['deltaT'].max().total_seconds(),3)], 'DeltaT Bounds', 'seconds')
         self.add_value_validity_stat([len(df_proc[(df_proc['deltaT'] <= MAX_DELTA_T)]),len(df_proc[(df_proc['deltaT'] > MAX_DELTA_T)])], 'DeltaT Validity')
     
         logging.debug("Running quality tests...")
@@ -245,7 +245,7 @@ class CompPresParser(OpenVDMCSVParser):
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
-            self.openvdm.sendMsg('Parsing ', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join(errors)))
+            self.openvdm.sendMsg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join([str(error) for error in errors])))
 
 
 # -------------------------------------------------------------------------------------
@@ -280,7 +280,7 @@ if __name__ == "__main__":
     parsed_args.verbosity = min(parsed_args.verbosity, max(LOG_LEVELS))
     logging.getLogger().setLevel(LOG_LEVELS[parsed_args.verbosity])
 
-    ovdm_parser = CompPresParser(RAW_COLUMNS, PROC_COLUMNS, start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat)
+    ovdm_parser = CompPresParser(start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat, use_openvdm_api=False)
 
     try:
         logging.info("Processing file: {}".format(parsed_args.dataFile))
