--- a/server/plugins/parsers/par2_parser.py.dist
+++ b/server/plugins/parsers/par2_parser.py.dist
@@ -1,11 +1,11 @@
 # =================================================================================== #
 #
-#         FILE:  twind_parser.py
+#         FILE:  par2_parser.py
 #
-#        USAGE:  twind_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
+#        USAGE:  par2_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
 #
-#  DESCRIPTION:  Parse the supplied true wind data and return the json-formatted
-#                string used by OpenVDM as part of it's Data dashboard.
+#  DESCRIPTION:  Parse the supplied PAR sensor data and return the json-formatted string
+#                used by OpenVDM as part of it's Data dashboard.
 #
 #      OPTIONS:  [-h] Return the help message.
 #                [-v] Increase verbosity (default: warning)
@@ -62,13 +62,13 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLS = ['date_time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # OpenRVDAS style
-# RAW_COLS = ['date','time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # SCS style
-PROC_COLUMNS = ['date_time','wind_speed','wind_dir']
+RAW_COLS = ['date_time','hdr','interna_date','internal_time','samples_used','avg_voltage_from_thermopile','lw_irradiance','pir_case_temp','pir_dome_temp','sw_irradiance','circuit_board_temp','voltage_after_diode_drop'] # OpenRVDAS style
+# RAW_COLS = ['date','time','hdr','interna_date','internal_time','samples_used','avg_voltage_from_thermopile','lw_irradiance','pir_case_temp','pir_dome_temp','sw_irradiance','circuit_board_temp','voltage_after_diode_drop'] # SCS style
+PROC_COLS = ['date_time','lw_irradiance','sw_irradiance']
 
 ROUNDING = {
-    'wind_speed': 2,
-    'wind_dir':1
+    'lw_irradiance': 3,
+    'sw_irradiance': 3
 }
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
@@ -77,7 +77,7 @@ DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
 # DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
-class TWindParser(OpenVDMCSVParser):
+class ParParser(OpenVDMCSVParser):
 
     def __init__(self, start_dt=None, stop_dt=None, time_format=DEFAULT_TIME_FORMAT, use_openvdm_api=True):
         super().__init__(start_dt=start_dt, stop_dt=stop_dt)
@@ -103,9 +103,9 @@ class TWindParser(OpenVDMCSVParser):
                         date_time = line['date_time'] # OpenRVDAS style
                         #date_time = ' '.join([line['date'], line['time']]) # SCS style
 
-                        wind_speed = float(line['wind_speed'])
-                        wind_dir = float(line['wind_dir'])
-                    
+                        lw_irradiance = float(line['lw_irradiance'])
+                        sw_irradiance = float(line['sw_irradiance'])
+
                     except Exception as err:
                         errors.append(lineno)
                         logging.warning("Parsing error encountered on line {}".format(lineno))
@@ -114,8 +114,8 @@ class TWindParser(OpenVDMCSVParser):
 
                     else:
                         raw_into_df['date_time'].append(date_time)
-                        raw_into_df['wind_speed'].append(wind_speed)
-                        raw_into_df['wind_dir'].append(wind_dir)
+                        raw_into_df['lw_irradiance'].append(lw_irradiance)
+                        raw_into_df['sw_irradiance'].append(sw_irradiance)
 
         except Exception as err:
             logging.error("Problem accessing input file: {}".format(filePath))
@@ -158,7 +158,8 @@ class TWindParser(OpenVDMCSVParser):
         self.add_time_bounds_stat([df_proc['date_time'].min(), df_proc['date_time'].max()])
         self.add_bounds_stat([round(df_proc['deltaT'].min().total_seconds(),3), round(df_proc['deltaT'].max().total_seconds(),3)], 'DeltaT Bounds', 'seconds')
         self.add_value_validity_stat([len(df_proc[(df_proc['deltaT'] <= MAX_DELTA_T)]),len(df_proc[(df_proc['deltaT'] > MAX_DELTA_T)])], 'DeltaT Validity')
-        self.add_bounds_stat([round(df_proc['wind_speed'].min(),2), round(df_proc['wind_speed'].max(),2)], 'Wind Speed Bounds', 'm/s')
+        self.add_bounds_stat([round(df_proc['lw_irradiance'].min(),3), round(df_proc['lw_irradiance'].max(),3)], 'LW Irradiance', '')
+        self.add_bounds_stat([round(df_proc['sw_irradiance'].min(),3), round(df_proc['lw_irradiance'].max(),3)], 'SW Irradiance', '')
         
         logging.debug("Running quality tests...")
         # % of bad rows in datafile
@@ -195,15 +196,15 @@ class TWindParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','wind_speed']].to_json(orient='values'))
-        visualizerDataObj['unit'] = 'm/s'
-        visualizerDataObj['label'] = 'Wind Speed'
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','lw_irradiance']].to_json(orient='values'))
+        visualizerDataObj['unit'] = ''
+        visualizerDataObj['label'] = 'LW Irradiance'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
         self.add_visualization_data(visualizerDataObj)
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','wind_dir']].to_json(orient='values'))
-        visualizerDataObj['unit'] = 'deg'
-        visualizerDataObj['label'] = 'Wind Direction'
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','sw_irradiance']].to_json(orient='values'))
+        visualizerDataObj['unit'] = ''
+        visualizerDataObj['label'] = 'SW Irradiance'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
         self.add_visualization_data(visualizerDataObj)
 
@@ -216,7 +217,7 @@ class TWindParser(OpenVDMCSVParser):
 # Required python code for running the script as a stand-alone utility
 # -------------------------------------------------------------------------------------
 if __name__ == "__main__":
-    parser = argparse.ArgumentParser(description='Parse true wind sensor data')
+    parser = argparse.ArgumentParser(description='Parse PAR sensor data')
     parser.add_argument('-v', '--verbosity', dest='verbosity',
                         default=0, action='count',
                         help='Increase output verbosity')
@@ -244,7 +245,7 @@ if __name__ == "__main__":
     parsed_args.verbosity = min(parsed_args.verbosity, max(LOG_LEVELS))
     logging.getLogger().setLevel(LOG_LEVELS[parsed_args.verbosity])
 
-    ovdm_parser = TWindParser(start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat)
+    ovdm_parser = ParParser(start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat, use_openvdm_api=False)
 
     try:
         logging.info("Processing file: {}".format(parsed_args.dataFile))
