--- a/server/plugins/parsers/met_parser.py.dist
+++ b/server/plugins/parsers/met_parser.py.dist
@@ -48,12 +48,12 @@
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -62,8 +62,8 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLS = ['date_time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temp_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # OpenRVDAS style
-# RAW_COLS = ['date','time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temperature_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_direction','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # SCS style
+# RAW_COLS = ['date_time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temp_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # OpenRVDAS style
+RAW_COLS = ['date','time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temperature_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # SCS style
 PROC_COLS = ['date_time','air_pres','air_temp','humidity','vector_wind_spd','vector_wind_dir']
 
 ROUNDING = {
@@ -76,8 +76,8 @@ ROUNDING = {
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class MetParser(OpenVDMCSVParser):
@@ -103,8 +103,8 @@ class MetParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = line['date_time'] # OpenRVDAS style
+                        date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         air_pres = float(line['air_pres'])
                         air_temp = float(line['air_temp'])
@@ -207,35 +207,35 @@ class MetParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','air_pres']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','air_pres']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'mBar'
         visualizerDataObj['label'] = 'Air Pressure'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','air_temp']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','air_temp']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'C'
         visualizerDataObj['label'] = 'Air Temperature'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','humidity']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','humidity']].to_json(orient='values'))
         visualizerDataObj['unit'] = '%'
         visualizerDataObj['label'] = 'Relative Humidity'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
         
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','vector_wind_spd']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','vector_wind_spd']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm/s'
         visualizerDataObj['label'] = 'Relative Wind Spd'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','vector_wind_dir']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','vector_wind_dir']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Relative Wind Dir'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
