--- a/server/plugins/parsers/svp_parser.py.dist
+++ b/server/plugins/parsers/svp_parser.py.dist
@@ -64,9 +64,9 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLS = ['date_time','sound_spd'] # OpenRVDAS style
-# RAW_COLS = ['date','time','sound_spd'] # SCS style
-PROC_COLS = ['date','time','sound_spd']
+# RAW_COLS = ['date_time','sound_spd'] # OpenRVDAS style
+RAW_COLS = ['date','time','sound_spd'] # SCS style
+PROC_COLS = ['date_time','sound_spd']
 
 ROUNDING = {
     'sound_spd': 2
@@ -74,8 +74,8 @@ ROUNDING = {
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class SVPParser(OpenVDMCSVParser):
@@ -101,8 +101,8 @@ class SVPParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = line['date_time'] # OpenRVDAS style
+                        date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         sound_spd = float(line['sound_spd'])
 
@@ -194,7 +194,7 @@ class SVPParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','sound_spd']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','sound_spd']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm/s'
         visualizerDataObj['label'] = 'Sound Speed'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
