--- a/server/plugins/parsers/twind_parser.py.dist
+++ b/server/plugins/parsers/twind_parser.py.dist
@@ -62,9 +62,9 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLS = ['date_time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # OpenRVDAS style
-# RAW_COLS = ['date','time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # SCS style
-PROC_COLUMNS = ['date_time','wind_speed','wind_dir']
+# RAW_COLS = ['date_time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # OpenRVDAS style
+RAW_COLS = ['date','time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # SCS style
+PROC_COLS = ['date_time','wind_speed','wind_dir']
 
 ROUNDING = {
     'wind_speed': 2,
@@ -73,8 +73,8 @@ ROUNDING = {
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class TWindParser(OpenVDMCSVParser):
@@ -100,8 +100,8 @@ class TWindParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = line['date_time'] # OpenRVDAS style
+                        date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         wind_speed = float(line['wind_speed'])
                         wind_dir = float(line['wind_dir'])
@@ -195,13 +195,13 @@ class TWindParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','wind_speed']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','wind_speed']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm/s'
         visualizerDataObj['label'] = 'Wind Speed'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
         self.add_visualization_data(visualizerDataObj)
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','wind_dir']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','wind_dir']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Wind Direction'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
